[project]
name = "ytpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Jay Patel", email = "jay@jpatel.net"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/youravgjay/ytpt"
Repository = "https://github.com/youravgjay/ytpt"